<resources>
    <string name="app_name">Digimon App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Digital Analyzer</string>
    <string name="digimon_list_btn">Listado de Digimon</string>
    <string name="favorite_digimon_btn">Favoritos</string>
    <string name="settings_btn">Configuración</string>
    <string name="filter">Filtrar</string>
    <string name="search">Buscar</string>
    <string name="x_antibody">Anticuerpo-X</string>
    <string name="search_by_name">Nombre</string>
    <string name="apply">Aplicar</string>
    <string name="attribute_prompt">Seleccionar atributo</string>
    <string name="level_prompt">Seleccionar nivel</string>



    <string name="all_option">Todos</string>

    <!-- Attributes -->
    <string name="attribute_data">Datos</string>
    <string name="attribute_vaccine">Vacuna</string>
    <string name="attribute_virus">Virus</string>

    <!-- Levels -->
    <string name="level_baby1">Bebé I</string>
    <string name="level_baby2">Bebé II</string>
    <string name="level_child">Principiante</string>
    <string name="level_adult">Campeón</string>
    <string name="level_perfect">Perfecto</string>
    <string name="level_ultimate">Supremo</string>
    <string name="unknown">Desconocido</string>
    <string name="description_not_available">Descripción no disponible</string>
    <string name="favorites">Favoritos</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="configuraci_n">Configuración</string>
    <string name="atributo">Atributo</string>
    <string name="campos">Campos</string>
    <string name="tipo">Tipo</string>
    <string name="descripci_n">Descripción</string>
    <string name="habilidades">Habilidades</string>
    <string name="evoluciones_previas">Evoluciones Previas</string>
    <string name="evolutions">Evolutions</string>
    <string name="ver_en_el_mapa">Ver en el mapa</string>
    <string name="nivel">Nivel</string>
    <string name="imagen_del_digimon">Imagen del digimon</string>
    <string name="mapa">Mapa de la isla File</string>
    <string name="marcador">Marcador</string>
    <string name="theme_title">Tema</string>
    <string name="language_title">Idioma</string>
    <string name="theme_summary">Selecciona el tema de la aplicación</string>
    <string name="language_summary">Selecciona el idioma de la aplicación</string>

</resources>