<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:attr/dividerVertical"
        android:showDividers="middle"
        android:dividerPadding="8dp">

        <!-- Nombre del Digimon -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/digimon_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:background="@drawable/background_gradient"/>
        </androidx.cardview.widget.CardView>

        <!-- Imagen del Digimon -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp">

            <ImageView
                android:id="@+id/digimon_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@drawable/background_gradient"
                android:contentDescription="@string/imagen_del_digimon"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <!-- Nivel -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:text="@string/nivel"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/background_gradient"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <TextView
                    android:id="@+id/digimon_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/show_map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="64dp"
            android:paddingHorizontal="16dp"
            android:text="@string/ver_en_el_mapa"
            android:layout_gravity="center_horizontal" />




        <!-- Atributo -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:text="@string/atributo"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/background_gradient"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <TextView
                    android:id="@+id/digimon_attribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Campos -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:text="@string/campos"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/background_gradient"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <LinearLayout
                    android:id="@+id/digimon_fields_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Tipo -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:text="@string/tipo"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/background_gradient"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <TextView
                    android:id="@+id/digimon_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Descripción -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:text="@string/descripci_n"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/background_gradient"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <TextView
                    android:id="@+id/digimon_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Habilidades -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:text="@string/habilidades"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/background_gradient"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <LinearLayout
                    android:id="@+id/digimon_skills_description_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Evoluciones Previas -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:text="@string/evoluciones_previas"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/background_gradient"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <LinearLayout
                    android:id="@+id/digimon_prior_evolutions_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Evoluciones Futuras -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:text="@string/evolutions"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/background_gradient"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <LinearLayout
                    android:id="@+id/digimon_next_evolutions_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
